--- a/desenvolvimento/projetoDebroiEventos/css/sobre.css
+++ b/desenvolvimento/projetoDebroiEventos/css/sobre.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #2e41a9;
+    background-image: url("../img/fundo.png");
 }
 
 /* Menu fixo */
@@ -11,20 +11,24 @@ body {
     position: fixed;
     top: 0;
     width: 97%;
-    background-color: #333;
+    background-color: #2b2a2a;
     display: flex;
-    margin-top: 15px;
-    justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(39, 37, 37, 0.2);
     z-index: 1000;
+    border-radius: 20px;
 }
 
 .menu-fixo nav {
     display: flex;
     gap: 20px;
-    flex-wrap: wrap; /* Permite que os itens do menu quebrem linha em telas menores */
+    flex-wrap: wrap;
+    /* Permite que os itens do menu quebrem linha em telas menores */
 }
 
 .menu-fixo nav a {
@@ -32,15 +36,16 @@ body {
     text-decoration: none;
     font-size: 1em;
     transition: color 0.3s;
-    white-space: nowrap; /* Impede quebra de linha dentro de um item do menu */
+    white-space: nowrap;
+    /* Impede quebra de linha dentro de um item do menu */
 }
 
 .menu-fixo nav a:hover {
-    content:  " ";
+    content: " ";
     height: 2px;
     color: #f0ed51;
-    background-image: linear-gradient(45deg,#d0ff00,#ff7100);
-    margin: 3px;
+    background-image: linear-gradient(45deg, #d0ff00, #ff7100);
+    margin-top: 3px;
 }
 
 .menu-links {
@@ -96,8 +101,10 @@ body {
 .sobre-imagem {
     width: 35%;
     border-radius: 20px;
-    width: 500px; /* Define a largura desejada */
-    height: auto; /* Ajusta a altura proporcionalmente */
+    width: 500px;
+    /* Define a largura desejada */
+    height: auto;
+    /* Ajusta a altura proporcionalmente */
     margin-top: 50px;
     margin-left: 100px;
 }
