--- a/desenvolvimento/css/chacaras.css
+++ b/desenvolvimento/css/chacaras.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
     min-height: 100vh;
     background-image: url("../img/fundo.png");
 }
@@ -81,8 +82,11 @@ body {
 }
 
 .container {
-    height: 300px;
-    width: 90%;
+    height: 220px;
+    width: max-content;
+    left: 90px;
+    padding-top: 80px;
+    padding-left: 110px;
     display: flex;
     flex-wrap: wrap;
     justify-content: baseline;
@@ -90,17 +94,15 @@ body {
     justify-content: baseline;
     min-height: 600px;
     position: relative;
-    left: 90px;
 
 }
 
 .chacara {
-    margin: 20px;
+    margin: 15px;
     margin-top: 50px;
-
     width: 22%;
-    height: 525px;
-    width: 375px;
+    height: 500px;
+    width: 350px;
     background-color: #448688;
     /* justify-items: center; */
     border-radius: 5%;
@@ -108,12 +110,12 @@ body {
 
 .imgChacara {
     height: 250px;
-    width: 375px;
+    width: 350px;
     background-color: #50a5b3;
 }
 
 .imgChacara img {
-    width: 375px;
+    width: 350px;
     height: 250px;
     border-radius: 5%;
 }
@@ -124,7 +126,7 @@ body {
     border-radius: 10%;
     align-content: center;
     width: 100%;
-    height: 50px;
+    height: 40px;
     font-size: 20px;
 }
 
@@ -149,9 +151,16 @@ body {
     margin: 0%;
 }
 
-.chacaraObservacoes p {
-    font-size: 14px;
-    margin-top: 1px;
+.chacaraObservacoes ul {
+    list-style: none !important;
+    margin: 15px 10px 15px;
+    padding: 0;
+}
+
+.chacaraObservacoes li {
+    list-style: none !important;
+    font-family: sans-serif;
+    font-size: 16px;
 }
 
 .divbtnChacara {
