--- a/desenvolvimento/css/chacaras.css
+++ b/desenvolvimento/css/chacaras.css
@@ -164,9 +164,14 @@ body {
 }
 
 .divbtnChacara {
+
     margin: 20px;
     text-align: center;
     width: 300px;
     height: 20px;
     border-radius: 5%;
+}
+
+.btnSobre {
+    cursor: pointer;
 }
