--- a/desenvolvimento/css/contato.css
+++ b/desenvolvimento/css/contato.css
@@ -6,7 +6,6 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #2e41a9;
 }
 
 /* Menu fixo */
@@ -70,22 +69,24 @@ body {
 
 /* Seção de Contato */
 .contato {
-    background-image: url('/img/casamento.jpg'); /* Substitua pelo caminho da sua imagem */
+    background-image: url("../img/casamento.jpg");/* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: center;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 80px; /* Para não sobrepor o menu fixo */
+    padding-top: 150px; /* Para não sobrepor o menu fixo */
+    padding-bottom: 100px;
 }
 
 .form-container {
-    background-color: #2e41a9;;
+    background-color:#2e41a9; 
+    padding-top: 50px;
     padding: 30px;
     border-radius: 10px;
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
@@ -118,19 +119,22 @@ textarea {
     resize: vertical;
 }
 
-button {
-    background-color: #ffde59;
-    padding: 10px 20px;
-    font-size: 1.2rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+.btnEnviarCtt{
+    display: flex;
+    justify-content: flex-end; /* move o botão para a direita */
+    padding-right: 40px;
 }
 
-button:hover {
-    background-color: #e1e1e1;
+button {
+  background-color: #ffde59;
+  padding: 10px 50px;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
+
 
 footer {
     text-align: center;
