--- a/desenvolvimento/css/contato.css
+++ b/desenvolvimento/css/contato.css
@@ -8,80 +8,24 @@ body {
     font-family: Arial, sans-serif;
 }
 
-/* Menu fixo */
-.menu-fixo {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #333;
-    display: flex;
-    margin-top: 15px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    border-radius: 20px;
-}
-
-.menu-fixo nav {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap; /* Permite que os itens do menu quebrem linha em telas menores */
-}
-
-.menu-fixo nav a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1em;
-    transition: color 0.3s;
-    white-space: nowrap; /* Impede quebra de linha dentro de um item do menu */
-}
-
-.menu-fixo nav a:hover {
-    content:  " ";
-    height: 2px;
-    color: #f0ed51;
-    background-image: linear-gradient(45deg,#d0ff00,#ff7100);
-    margin: 3px;
-}
-
-.menu-fixo .imagemlogo {
-    width: 200px;
-    height: auto;
-}
-
-.menu-links {
-    display: flex;
-    gap: 20px;
-}
-
-.menu-links a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1em;
-    transition: color 0.3s;
-}
-
-.menu-links a:hover {
-    color: #ff9800;
-}
 
 /* Seção de Contato */
 .contato {
-    background-image: url("../img/casamento.jpg");/* Substitua pelo caminho da sua imagem */
+    background-image: url("../img/casamento.jpg");
+    /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: center;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 150px; /* Para não sobrepor o menu fixo */
+    padding-top: 150px;
+    /* Para não sobrepor o menu fixo */
     padding-bottom: 100px;
 }
 
 .form-container {
-    background-color:#2e41a9; 
+    background-color: #2e41a9;
     padding-top: 50px;
     padding: 30px;
     border-radius: 10px;
@@ -106,7 +50,9 @@ label {
     margin-left: 50px;
 }
 
-input, textarea, select {
+input,
+textarea,
+select {
     width: 85%;
     padding: 10px;
     margin-bottom: 20px;
@@ -119,20 +65,21 @@ textarea {
     resize: vertical;
 }
 
-.btnEnviarCtt{
+.btnEnviarCtt {
     display: flex;
-    justify-content: flex-end; /* move o botão para a direita */
+    justify-content: flex-end;
+    /* move o botão para a direita */
     padding-right: 40px;
 }
 
 button {
-  background-color: #ffde59;
-  padding: 10px 50px;
-  font-size: 1.2rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+    background-color: #ffde59;
+    padding: 10px 50px;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 
@@ -152,7 +99,10 @@ footer {
         font-size: 2rem;
     }
 
-    label, input, textarea, select {
+    label,
+    input,
+    textarea,
+    select {
         font-size: 1rem;
     }
 }
