--- a/desenvolvimento/css/infoChacaras.css
+++ b/desenvolvimento/css/infoChacaras.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    margin-top: 80px;
     font-family: 'Segoe UI', sans-serif;
     background-color: #2f3ca3;
     color: white;
@@ -25,36 +26,35 @@ nav a {
 }
 
 .container {
+    width: 100%;
+    /* ou defina um valor fixo como 1200px */
+    max-width: 1200px;
+    /* evita que fique esticando em telas grandes */
+    margin: 0 auto;
+    /* centraliza o .container na tela (opcional) */
     padding: 20px;
-    max-width: 800px;
-    margin: auto;
 }
 
-h1 {
-    text-align: center;
-}
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
-    margin-bottom: 20px;
-}
 
 .gallery img {
     border-radius: 8px;
 }
 
 .buttons {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    margin: 20px 0;
+    width: 400px;
+    height: 150px;
+    display: block;
+    justify-content: flex-start;
+    position: absolute;
+    right: 10%;
+    gap: 100px;
+    margin-top: 20px;
 }
 
 button {
+    margin-top: 20px;
     border: none;
+    width: 350px;
     padding: 12px 20px;
     border-radius: 6px;
     font-weight: bold;
@@ -73,7 +73,7 @@ button {
 }
 
 .info h2 {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .features {
@@ -81,21 +81,38 @@ button {
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 8px;
-    margin-bottom: 20px;
+    gap: 10px;
+    font-size: 14px;
+    width: 1000px;
+    max-width: 100%;
+}
+
+.features li {
+    font-size: 22px;
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+.info p {
+    font-size: 24px;
 }
 
 .owner {
+    margin: 70px;
     display: flex;
     align-items: center;
     gap: 15px;
     margin-bottom: 20px;
 }
 
+.owner strong {
+    font-size: 22px;
+}
+
 .owner img {
     border-radius: 50%;
-    width: 80px;
-    height: 80px;
+    width: 150px;
+    height: 150px;
 }
 
 .description h2 {
@@ -107,8 +124,12 @@ button {
 }
 
 footer {
+    width: auto;
+    height: 60px;
+    background-color: #101530;
     margin-top: 30px;
     display: flex;
+    align-items: center;
     justify-content: center;
     gap: 20px;
 }
@@ -118,13 +139,25 @@ footer img {
     height: 40px;
 }
 
+.container h1 {
+    text-align: left;
+    font-size: 50px;
+    margin: 20px;
+}
+
+
 .gallery {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    align-items: flex-start;
+    gap: 10px;
+    width: 1350px;
+    height: auto;
     justify-content: center;
-    flex-wrap: nowrap;
+    /* centraliza os itens */
+    align-items: flex-start;
+    margin: 0 auto;
+    /* centraliza a div .gallery */
+    width: fit-content;
 }
 
 .imgGrande img {
@@ -145,4 +178,15 @@ footer img {
     height: 211px;
     object-fit: cover;
     border-radius: 6px;
+}
+
+.description {
+    margin-top: 60px;
+    font-size: 20px;
+    margin-bottom: 70px;
+
+}
+
+.description h2 {
+    font-size: 24px;
 }
