--- a/desenvolvimento/css/styles.css
+++ b/desenvolvimento/css/styles.css
@@ -1,11 +1,27 @@
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow-x: hidden;
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
+html,
+body {
+  position: relative;
+  height: 100%;
+}
 
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #c4acac;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .swiper-slide img {
   filter: brightness(50%);
