--- a/desenvolvimento/css/menuBarra.css
+++ b/desenvolvimento/css/menuBarra.css
@@ -35,6 +35,8 @@
 }
 
 .menu-links a {
+    display: flex;
+    align-items: center;
     color: #fff;
     text-decoration: none;
     transition: color 0.3s;
@@ -62,4 +64,68 @@
 .imagemlogo {
     width: 200px;
     height: auto;
+}
+
+
+/* perfil  */
+/* PERFIL COM DROPDOWN */
+.profile-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.profile-button {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 8px 12px;
+    background: transparent;
+    color: white;
+    border: none;
+    font-weight: bold;
+}
+
+.profile-dropdown {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    background-color: #f0f0f0;
+    width: 180px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+    z-index: 1000;
+}
+
+.profile-dropdown div {
+    padding: 10px 15px;
+    border-bottom: 1px solid #ccc;
+    color: #111;
+}
+
+.profile-dropdown div:last-child {
+    border-bottom: none;
+}
+
+.profile-dropdown div:hover {
+    background-color: #ddd;
+}
+
+.profile-container:hover .profile-dropdown {
+    display: block;
+}
+
+/* Fundo com pontilhado */
+.dot-bg {
+    background-image: radial-gradient(#ccc 1px, transparent 1px);
+    background-size: 20px 20px;
+    height: 100vh;
+}
+
+
+/* perfil */
+.profile-dropdown a {
+    color: #111;
 }
