--- a/desenvolvimento/css/servicos.css
+++ b/desenvolvimento/css/servicos.css
@@ -10,7 +10,6 @@ body {
   background-image: url("../img/fundo.png");
   /* azul escuro */
   color: #fff;
-  padding: 40px;
 }
 
 .servicos {
@@ -101,6 +100,7 @@ body {
   gap: 20px;
   justify-content: center;
   flex-wrap: wrap;
+  margin-bottom: 80px;
 }
 
 .cliente {
