--- a/desenvolvimento/css/chacaras.css
+++ b/desenvolvimento/css/chacaras.css
@@ -84,6 +84,13 @@ body {
     font-size: 16px;
 }
 
+.cortar-texto {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 
 /* botao */
 
